// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DocumentsModule Should render file lists correctly 1`] = `
<DocumentsModule
  breadCrumbs={
    Array [
      Object {
        "clickHandler": [Function],
        "text": "Home",
      },
      Object {
        "clickHandler": [Function],
        "text": "Ozzy Perez",
      },
      Object {
        "clickHandler": [Function],
        "text": "2017 Form 1040",
      },
    ]
  }
  clickSelection={null}
  clients={
    Object {
      "100000": Object {
        "clientName": "Ozzy Perez",
        "id": "100000",
      },
      "100001": Object {
        "clientName": "Alondra Perez",
        "id": "100001",
      },
    }
  }
  currentModule={
    Object {
      "filePath": null,
      "listType": "documents",
      "name": "documents",
      "parentId": "1",
      "textFileData": null,
    }
  }
  documentHistory={Array []}
  documents={
    Object {
      "AAAAAAAAAAA": Object {
        "accessLevel": "PUBLIC",
        "category": Object {
          "description": "Workpapers",
          "id": 3,
        },
        "description": "file2",
        "fileType": "PDF",
        "id": "AAAAAAAAAAA",
        "project": 1,
        "year": 2017,
      },
      "ASDFHOWEOUH": Object {
        "accessLevel": "PUBLIC",
        "category": Object {
          "description": "Notes",
          "id": 4,
        },
        "client": "100000",
        "description": "notes",
        "fileType": "TXT",
        "id": "ASDFHOWEOUH",
        "project": 1,
        "year": 2017,
      },
      "BBBBBBBBBBB": Object {
        "accessLevel": "PUBLIC",
        "category": Object {
          "description": "Workpapers",
          "id": 3,
        },
        "client": "100000",
        "description": "file3",
        "fileType": "EXCEL",
        "id": "BBBBBBBBBBB",
        "project": 1,
        "year": 2017,
      },
    }
  }
  iconDisplayType="grid-view"
  projects={
    Object {
      "1": Object {
        "category": Object {
          "description": "Tax Return",
          "id": 1,
        },
        "client": "100000",
        "dateCreated": "2018-04-26T19:58:20.000+0000",
        "dateDue": "2017-04-15",
        "id": 1,
        "name": "2017 Form 1040",
      },
    }
  }
  serviceCaller={[Function]}
  updateGlobalState={[Function]}
  updateModuleState={[Function]}
>
  <Module
    buttonActions={
      Array [
        [Function],
        null,
      ]
    }
    iconDisplayType="grid-view"
    title="Documents"
  >
    <div
      className="Module"
      id="DocumentsModule"
    >
      <div
        id="toolbar"
      >
        <h1>
          Documents
        </h1>
        <div
          className="toolbarButtons"
        >
          <button
            className="toggleIconView toolbar-button button-grid-view"
            key="0"
            onClick={[Function]}
          />
        </div>
      </div>
      <Breadcrumbs
        breadcrumbs={
          Array [
            Object {
              "clickHandler": [Function],
              "text": "Home",
            },
            Object {
              "clickHandler": [Function],
              "text": "Ozzy Perez",
            },
            Object {
              "clickHandler": [Function],
              "text": "2017 Form 1040",
            },
          ]
        }
      >
        <div
          id="breadcrumbs"
        >
          <div
            id="breadcrumb-slider"
          >
            <div
              data-level={1}
              key="0"
              onClick={[Function]}
            >
              Home
            </div>
            <div
              data-level={2}
              key="1"
              onClick={[Function]}
            >
              Ozzy Perez
            </div>
            <div
              data-level={3}
              key="2"
              onClick={[Function]}
            >
              2017 Form 1040
            </div>
          </div>
        </div>
      </Breadcrumbs>
      <IconLinkList
        clickSelection={null}
        displayType="grid-view"
        iconClickHandler={[Function]}
        iconDoubleClickHandler={[Function]}
        list={
          Object {
            "AAAAAAAAAAA": Object {
              "accessLevel": "PUBLIC",
              "category": Object {
                "description": "Workpapers",
                "id": 3,
              },
              "description": "file2",
              "fileType": "PDF",
              "id": "AAAAAAAAAAA",
              "project": 1,
              "year": 2017,
            },
            "ASDFHOWEOUH": Object {
              "accessLevel": "PUBLIC",
              "category": Object {
                "description": "Notes",
                "id": 4,
              },
              "client": "100000",
              "description": "notes",
              "fileType": "TXT",
              "id": "ASDFHOWEOUH",
              "project": 1,
              "year": 2017,
            },
            "BBBBBBBBBBB": Object {
              "accessLevel": "PUBLIC",
              "category": Object {
                "description": "Workpapers",
                "id": 3,
              },
              "client": "100000",
              "description": "file3",
              "fileType": "EXCEL",
              "id": "BBBBBBBBBBB",
              "project": 1,
              "year": 2017,
            },
          }
        }
        nameLabel="description"
        type="documents"
      >
        <ul
          className="frame grid-view"
        >
          <IconLink
            dblClickHandler={[Function]}
            details={
              Object {
                "category": "Workpapers",
                "year": 2017,
              }
            }
            fileType="PDF"
            iconClickHandler={[Function]}
            id="AAAAAAAAAAA"
            key="AAAAAAAAAAA"
            name="file2"
            selected={false}
            view="grid-view"
          >
            <li
              className=" PDF"
              data-id="AAAAAAAAAAA"
              onClick={[Function]}
              onDoubleClick={[Function]}
              title="file2"
            >
              <p>
                file2
              </p>
              <span
                className="details"
              />
            </li>
          </IconLink>
          <IconLink
            dblClickHandler={[Function]}
            details={
              Object {
                "category": "Workpapers",
                "year": 2017,
              }
            }
            fileType="EXCEL"
            iconClickHandler={[Function]}
            id="BBBBBBBBBBB"
            key="BBBBBBBBBBB"
            name="file3"
            selected={false}
            view="grid-view"
          >
            <li
              className=" EXCEL"
              data-id="BBBBBBBBBBB"
              onClick={[Function]}
              onDoubleClick={[Function]}
              title="file3"
            >
              <p>
                file3
              </p>
              <span
                className="details"
              />
            </li>
          </IconLink>
          <IconLink
            dblClickHandler={[Function]}
            details={
              Object {
                "category": "Notes",
                "year": 2017,
              }
            }
            fileType="TXT"
            iconClickHandler={[Function]}
            id="ASDFHOWEOUH"
            key="ASDFHOWEOUH"
            name="notes"
            selected={false}
            view="grid-view"
          >
            <li
              className=" TXT"
              data-id="ASDFHOWEOUH"
              onClick={[Function]}
              onDoubleClick={[Function]}
              title="notes"
            >
              <p>
                notes
              </p>
              <span
                className="details"
              />
            </li>
          </IconLink>
        </ul>
      </IconLinkList>
    </div>
  </Module>
</DocumentsModule>
`;

exports[`DocumentsModule Should render folder lists correctly 1`] = `
<DocumentsModule
  breadCrumbs={Array []}
  clickSelection={null}
  clients={
    Object {
      "100000": Object {
        "clientName": "Ozzy Perez",
        "id": "100000",
      },
      "100001": Object {
        "clientName": "Alondra Perez",
        "id": "100001",
      },
    }
  }
  currentModule={
    Object {
      "filePath": null,
      "listType": "clients",
      "name": "documents",
      "parentId": null,
      "textFileData": null,
    }
  }
  documentHistory={Array []}
  documents={
    Object {
      "AAAAAAAAAAA": Object {
        "accessLevel": "PUBLIC",
        "category": Object {
          "description": "Workpapers",
          "id": 3,
        },
        "description": "file2",
        "fileType": "PDF",
        "id": "AAAAAAAAAAA",
        "project": 1,
        "year": 2017,
      },
      "ASDFHOWEOUH": Object {
        "accessLevel": "PUBLIC",
        "category": Object {
          "description": "Notes",
          "id": 4,
        },
        "client": "100000",
        "description": "notes",
        "fileType": "TXT",
        "id": "ASDFHOWEOUH",
        "project": 1,
        "year": 2017,
      },
      "BBBBBBBBBBB": Object {
        "accessLevel": "PUBLIC",
        "category": Object {
          "description": "Workpapers",
          "id": 3,
        },
        "client": "100000",
        "description": "file3",
        "fileType": "EXCEL",
        "id": "BBBBBBBBBBB",
        "project": 1,
        "year": 2017,
      },
    }
  }
  iconDisplayType="grid-view"
  projects={
    Object {
      "1": Object {
        "category": Object {
          "description": "Tax Return",
          "id": 1,
        },
        "client": "100000",
        "dateCreated": "2018-04-26T19:58:20.000+0000",
        "dateDue": "2017-04-15",
        "id": 1,
        "name": "2017 Form 1040",
      },
    }
  }
  serviceCaller={[Function]}
  updateGlobalState={[Function]}
  updateModuleState={[Function]}
>
  <Module
    buttonActions={
      Array [
        [Function],
        null,
      ]
    }
    iconDisplayType="grid-view"
    title="Documents"
  >
    <div
      className="Module"
      id="DocumentsModule"
    >
      <div
        id="toolbar"
      >
        <h1>
          Documents
        </h1>
        <div
          className="toolbarButtons"
        >
          <button
            className="toggleIconView toolbar-button button-grid-view"
            key="0"
            onClick={[Function]}
          />
        </div>
      </div>
      <Breadcrumbs
        breadcrumbs={Array []}
      >
        <div
          id="breadcrumbs"
        >
          <div
            id="breadcrumb-slider"
          />
        </div>
      </Breadcrumbs>
      <IconLinkList
        clickSelection={null}
        displayType="grid-view"
        iconClickHandler={[Function]}
        iconDoubleClickHandler={[Function]}
        list={
          Object {
            "100000": Object {
              "clientName": "Ozzy Perez",
              "id": "100000",
            },
            "100001": Object {
              "clientName": "Alondra Perez",
              "id": "100001",
            },
          }
        }
        nameLabel="clientName"
        type="clients"
      >
        <ul
          className="frame grid-view"
        >
          <IconLink
            dblClickHandler={[Function]}
            details={
              Object {
                "id": "100001",
              }
            }
            fileType={null}
            iconClickHandler={[Function]}
            id="100001"
            key="100001"
            name="Alondra Perez"
            selected={false}
            view="grid-view"
          >
            <li
              className=" null"
              data-id="100001"
              onClick={[Function]}
              onDoubleClick={[Function]}
              title="Alondra Perez"
            >
              <p>
                Alondra Perez
              </p>
              <span
                className="details"
              />
            </li>
          </IconLink>
          <IconLink
            dblClickHandler={[Function]}
            details={
              Object {
                "id": "100000",
              }
            }
            fileType={null}
            iconClickHandler={[Function]}
            id="100000"
            key="100000"
            name="Ozzy Perez"
            selected={false}
            view="grid-view"
          >
            <li
              className=" null"
              data-id="100000"
              onClick={[Function]}
              onDoubleClick={[Function]}
              title="Ozzy Perez"
            >
              <p>
                Ozzy Perez
              </p>
              <span
                className="details"
              />
            </li>
          </IconLink>
        </ul>
      </IconLinkList>
    </div>
  </Module>
</DocumentsModule>
`;
